Free week index update

--- a/free-week-rotation/2015-06-23.html
+++ b/free-week-rotation/2015-06-23.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="View the Free Week Rotation for Heroes of the Storm">
+    <meta name="description" content="June 23rd - June 30th 2015 Free Week Rotation for Heroes of the Storm">
     <link rel="shortcut icon" href="18x18.ico">
-    <title>Free Hero Rotation</title>
+    <title>Free Hero Rotation (23 June 2015)</title>
 
     <!-- Bootstrap -->
     <link href="//heroesofthestorm.github.io/css/bootstrap.min.css" rel="stylesheet">
@@ -22,15 +22,15 @@
     <center>
       <div id="body">
         <div class="navigation list-group list-group-horizontal">
-          <a href="http://heroesofthestorm.github.io/zuna-tierlist" class="list-group-item">Zuna's Tierlist</a>
-          <a href="http://heroesofthestorm.github.io/idream-tierlist" class="list-group-item">iDream's Tierlist</a>
-          <a href="http://heroesofthestorm.github.io/kenma-tierlist" class="list-group-item">Kenma's Tierlist</a>
-          <a href="http://heroesofthestorm.github.io/free-hero-rotation" class="list-group-item active">Free Hero Rotation</a>
-          <a href="http://heroesofthestorm.github.io/tips" class="list-group-item">Useful Tips & Links</a>
+                <a href="http://heroesofthestorm.github.io/zuna-tierlist" class="list-group-item">Zuna's Tierlist</a>
+                <a href="http://heroesofthestorm.github.io/idream-tierlist" class="list-group-item">iDream's Tierlist</a>
+                <a href="http://heroesofthestorm.github.io/free-hero-rotation" class="list-group-item active">Free Hero Rotation</a>
+                <a href="http://heroesofthestorm.github.io/tips" class="list-group-item">Useful Tips & Links</a>
         </div>
 
         
         <h1>Free Week Rotation for Heroes of the Storm</h1>
+        <h4>Note: This is an older free week rotation (<a href="http://heroesofthestorm.github.io/free-hero-rotation">Click here for this week's rotation</a>)</h4>
           <div class="btn-group btn-group-primary">
             <a class="btn btn-primary">Assassin</a>
             <a class="btn btn-success">Specialist</a>
@@ -206,149 +206,6 @@
           </ul>
         </div>
 
-
-        <br />
-
-
-        <h2>June 16th - June 23rd 2015</h2>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-info" type="button">Brightwing</button>
-          <button data-toggle="dropdown" class="btn btn-info dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Scouting Drone</a></li>
-            <li><a>Level 4 - Promote</a></li>
-            <li><a>Level 7 - Gust of Healing</a></li>
-            <li><a>Level 10 - Emerald Wind</a></li>
-            <li><a>Level 13 - Sprint</a></li>
-            <li><a>Level 16 - Critterize</a></li>
-            <li><a>Level 20 - Rewind</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/26-brightwing#jPIIuPnIFIAPJPaAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/brightwing">Hero Information</a></li>
-          </ul>
-        </div>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-danger" type="button">Chen</button>
-          <button data-toggle="dropdown" class="btn btn-danger dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Consuming Flame</a></li>
-            <li><a>Level 4 - Amplified Healing</a></li>
-            <li><a>Level 7 - Combat Stance</a></li>
-            <li><a>Level 10 - Wandering Keg</a></li>
-            <li><a>Level 13 - Relentless</a></li>
-            <li><a>Level 16 - Pressure Point</a></li>
-            <li><a>Level 20 - Bolt of the Storm</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/36-chen#9OoMrMfMmM0MBPkAA">Zuna's Talent Build</a></li>
-            <li><a href="https://www.youtube.com/watch?v=j71Xdlq3QyQ">Video Commentary</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/chen">Hero Information</a></li>
-          </ul>
-        </div>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-primary" type="button">Kerrigan</button>
-          <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Sweeping Grasp</a></li>
-            <li><a>Level 4 - Envenom</a></li>
-            <li><a>Level 7 - Battle Momentum</a></li>
-            <li><a>Level 10 - Maelstrom</a></li>
-            <li><a>Level 13 - Sprint</a></li>
-            <li><a>Level 16 - Blood for Blood</a></li>
-            <li><a>Level 20 - Bolt of the Storm</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/12-kerrigan#oPmPwPPDtI_OvFMAA">Zuna's Talent Build</a></li>
-            <li><a href="https://www.youtube.com/watch?v=t8yB4yiBtWk">Video Commentary</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/kerrigan">Hero Information</a></li>
-          </ul>
-        </div>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-info" type="button">Malfurion</button>
-          <button data-toggle="dropdown" class="btn btn-info dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Scouting Drone</a></li>
-            <li><a>Level 4 - Protective Shield</a></li>
-            <li><a>Level 7 - Elune's Grace</a></li>
-            <li><a>Level 10 - Tranquility</a></li>
-            <li><a>Level 13 - Ice Block</a></li>
-            <li><a>Level 16 - Tenacious Roots</a></li>
-            <li><a>Level 20 - Storm Shield</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/16-malfurion#oPXKuPOB_FpPJPQAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/malfurion">Hero Information</a></li>
-          </ul>
-        </div>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-primary" type="button">Valla</button>
-          <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talents</b></a></li>
-            <li><a>Level 1 - Rapid Displacement</a></li>
-            <li><a>Level 4 - Sustained Anomaly</a></li>
-            <li><a>Level 7 - First Aid</a></li>
-            <li><a>Level 10 - Void Prison</a></li>
-            <li><a>Level 13 - Wormhole</a></li>
-            <li><a>Level 16 - Double Bombs</a></li>
-            <li><a>Level 20 - Rewind</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/15-valla#oPmPrPmBkBdHNFPAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/valla">Hero Information</a></li>
-          </ul>
-        </div>
-
-        <h3>Unlocked level 12</h3>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-success" type="button">Sergeant Hammer</button>
-          <button data-toggle="dropdown" class="btn btn-success dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Advanced Artillery</a></li>
-            <li><a>Level 4 - Maelstrom Shells</a></li>
-            <li><a>Level 7 - First Aid</a></li>
-            <li><a>Level 10 - Napalm Strike</a></li>
-            <li><a>Level 13 - Barricade</a></li>
-            <li><a>Level 16 - Mine Field</a></li>
-            <li><a>Level 20 - Advanced Lava Strike</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/17-sgt-hammer#FPnJiPdCdPoJeGRAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/sergeant-hammer">Hero Information</a></li>
-          </ul>
-        </div>
-
-        <h3>Unlocked level 15</h3>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-primary" type="button">Kael'thas</button>
-          <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Mana Addict</a></li>
-            <li><a>Level 4 - Gathering Power</a></li>
-            <li><a>Level 7 - Fission Bomb</a></li>
-            <li><a>Level 10 - Phoenix</a></li>
-            <li><a>Level 13 - Chain Bomb</a></li>
-            <li><a>Level 16 - Ignite</a></li>
-            <li><a>Level 20 - Bolt of the Storm</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/kaelthas">Hero Information</a></li>
-          </ul>
-        </div>
-
         <br />
 
         <style type="text/css">
@@ -414,15 +271,17 @@
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.3.1/jquery.cookie.min.js"></script>
 
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="//heroesofthestorm.github.io/js/bootstrap.min.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
       ga('create', 'UA-56620432-1', 'auto');
       ga('require', 'displayfeatures');
       ga('send', 'pageview');
+
     </script>
   </body>
 </html>
