Updated tier changes

--- a/zuna-tierlist.html
+++ b/zuna-tierlist.html
@@ -497,7 +497,7 @@
             </div>
             <div id="collapseChanges" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingChanges">
               <div class="list-group">
-                <li class="list-group-item"><strong>4 July 2015:</strong> The Butcher is added, 14 new builds, and tier changes</li>
+                <li class="list-group-item"><strong>4 July 2015:</strong> The Butcher is added, 14 new builds, Johanna & Kael'thas & Azmodan 2→1, Rehgar 3→1, Sylvanas & Anub'arak 1→2, Tyrande & Malfurion 3→2, Abathur & Brightwing & Kerrigan 2→3, Tychus & Li Li 4→3, The Lost Vikings 1→4, Sonya 5→4</li>
                 <li class="list-group-item"><strong>14 June 2015:</strong> Zeratul 2→1, Kael 1→2, Abathur & Zagara & Azmodan & Johanna 3→2</li>
                 <li class="list-group-item"><strong>6 June 2015:</strong> Updated build for Zeratul</li>
                 <li class="list-group-item"><strong>4 June 2015:</strong> Updated builds for 26 heroes</li>
