--- a/free-week-rotation/2015-07-07.html
+++ b/free-week-rotation/2015-07-07.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="View the Free Week Rotation for Heroes of the Storm">
+    <meta name="description" content="July 7th - July 14th 2015 Free Week Rotation for Heroes of the Storm">
     <link rel="shortcut icon" href="18x18.ico">
-    <title>Free Hero Rotation</title>
+    <title>Free Hero Rotation (7 July 2015)</title>
 
     <!-- Bootstrap -->
     <link href="//heroesofthestorm.github.io/css/bootstrap.min.css" rel="stylesheet">
@@ -22,15 +22,15 @@
     <center>
       <div id="body">
         <div class="navigation list-group list-group-horizontal">
-          <a href="http://heroesofthestorm.github.io/zuna-tierlist" class="list-group-item">Zuna's Tierlist</a>
-          <a href="http://heroesofthestorm.github.io/idream-tierlist" class="list-group-item">iDream's Tierlist</a>
-          <a href="http://heroesofthestorm.github.io/kenma-tierlist" class="list-group-item">Kenma's Tierlist</a>
-          <a href="http://heroesofthestorm.github.io/free-hero-rotation" class="list-group-item active">Free Hero Rotation</a>
-          <a href="http://heroesofthestorm.github.io/tips" class="list-group-item">Useful Tips & Links</a>
+                <a href="http://heroesofthestorm.github.io/zuna-tierlist" class="list-group-item">Zuna's Tierlist</a>
+                <a href="http://heroesofthestorm.github.io/idream-tierlist" class="list-group-item">iDream's Tierlist</a>
+                <a href="http://heroesofthestorm.github.io/free-hero-rotation" class="list-group-item active">Free Hero Rotation</a>
+                <a href="http://heroesofthestorm.github.io/tips" class="list-group-item">Useful Tips & Links</a>
         </div>
 
         
         <h1>Free Week Rotation for Heroes of the Storm</h1>
+        <h4>Note: This is an older free week rotation (<a href="http://heroesofthestorm.github.io/free-hero-rotation">Click here for this week's rotation</a>)</h4>
           <div class="btn-group btn-group-primary">
             <a class="btn btn-primary">Assassin</a>
             <a class="btn btn-success">Specialist</a>
@@ -208,148 +208,6 @@
 
         <br />
 
-        <h2>June 30th - July 7th</h2>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-primary" type="button">Falstad</button>
-          <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Updraft</a></li>
-            <li><a>Level 4 - Gathering Power</a></li>
-            <li><a>Level 7 - First Aid</a></li>
-            <li><a>Level 10 - Hinterland Blast</a></li>
-            <li><a>Level 13 - Static Shield</a></li>
-            <li><a>Level 16 - Overdrive</a></li>
-            <li><a>Level 20 - Epic Mount</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/11-falstad#aOcPiPkOdPIPYPLAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/falstad">Hero Information</a></li>
-          </ul>
-        </div>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-danger" type="button">Muradin</button>
-          <button data-toggle="dropdown" class="btn btn-danger dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Reverberation</a></li>
-            <li><a>Level 4 - Thunderburn</a></li>
-            <li><a>Level 7 - Piercing Bolt</a></li>
-            <li><a>Level 10 - Avatar</a></li>
-            <li><a>Level 13 - Thunderstrike</a></li>
-            <li><a>Level 16 - Stoneform</a></li>
-            <li><a>Level 20 - Rewind</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/22-muradin#jPNGEJfD0IcDGJWAA ">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/muradin">Hero Information</a></li>
-          </ul>
-        </div>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-primary" type="button">Raynor</button>
-          <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Give Me More!</a></li>
-            <li><a>Level 4 - Confident Aim</a></li>
-            <li><a>Level 7 - Revolution Overdrive</a></li>
-            <li><a>Level 10 - Raynor's Raiders</a></li>
-            <li><a>Level 13 - Double Barreled</a></li>
-            <li><a>Level 16 - Bullseye</a></li>
-            <li><a>Level 20 - Bolt of the Storm</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/3-raynor#oPWGSPCBaGPPZGDAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/raynor">Hero Information</a></li>
-          </ul>
-        </div>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-danger" type="button">Sonya</button>
-          <button data-toggle="dropdown" class="btn btn-danger dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Endless Fury</a></li>
-            <li><a>Level 4 - Shattered Ground</a></li>
-            <li><a>Level 7 - Poisoned Spear</a></li>
-            <li><a>Level 10 - Leap</a></li>
-            <li><a>Level 13 - Mystical Spear</a></li>
-            <li><a>Level 16 - Furious Blow</a></li>
-            <li><a>Level 20 - Hardened Shield</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/13-sonya#JQKQrPxC8OZPDHNAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/sonya">Hero Information</a></li>
-          </ul>
-        </div>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-info" type="button">Tyrande</button>
-          <button data-toggle="dropdown" class="btn btn-info dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Ranger's Mark</a></li>
-            <li><a>Level 4 - Healing Ward</a></li>
-            <li><a>Level 7 - Lunar Blaze</a></li>
-            <li><a>Level 10 - Starfall</a></li>
-            <li><a>Level 13 - Sprint</a></li>
-            <li><a>Level 16 - Shooting Star</a></li>
-            <li><a>Level 20 - Rewind</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/7-tyrande#jPSHwPRChBEPgLHAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/tyrande">Hero Information</a></li>
-          </ul>
-        </div>
-
-        <h3>Unlocked level 12</h3>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-success" type="button">Gazlowe</button>
-          <button data-toggle="dropdown" class="btn btn-success dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Extra TNT</a></li>
-            <li><a>Level 4 - Promote</a></li>
-            <li><a>Level 7 - Engine Gunk</a></li>
-            <li><a>Level 10 - Grav-o-bomb 3000</a></li>
-            <li><a>Level 13 - Sprint</a></li>
-            <li><a>Level 16 - Kwik Release Charge</a></li>
-            <li><a>Level 20 - Hardened Shield</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/5-gazlowe#cOVIvPeIdOYICPcAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/gazlowe">Hero Information</a></li>
-          </ul>
-        </div>
-
-        <h3>Unlocked level 15</h3>
-        <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-success" type="button">Azmodan</button>
-          <button data-toggle="dropdown" class="btn btn-success dropdown-toggle" type="button"><span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a><b>C9 iDream's Talent Order</b></a></li>
-            <li><a>Level 1 - Taste for Blood</a></li>
-            <li><a>Level 4 - Bound Minion</a></li>
-            <li><a>Level 7 - Infernal Globe</a></li>
-            <li><a>Level 10 - Black Pool</a></li>
-            <li><a>Level 13 - March of Sin</a></li>
-            <li><a>Level 16 - Blood for Blood</a></li>
-            <li><a>Level 20 - Fifth Circle</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesnexus.com/talent-calculator/39-azmodan#iNmPVNTNsNXNkNnAA">Zuna's Talent Build</a></li>
-            <li class="divider"></li>
-            <li><a href="http://www.heroesfire.com/hots/wiki/heroes/azmodan">Hero Information</a></li>
-          </ul>
-        </div>
-
-
-        <br />
-
         <style type="text/css">
         .adslot-3 { display:inline-block; width:468px; height:60px; }
         @media (max-width:500px) { .adslot-3 { width:320px; height:100px } }
@@ -413,15 +271,17 @@
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.3.1/jquery.cookie.min.js"></script>
 
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="//heroesofthestorm.github.io/js/bootstrap.min.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
       ga('create', 'UA-56620432-1', 'auto');
       ga('require', 'displayfeatures');
       ga('send', 'pageview');
+
     </script>
   </body>
 </html>
