Fixed Johanna spelling

--- a/free-hero-rotation.html
+++ b/free-hero-rotation.html
@@ -187,7 +187,7 @@
 
         <h3>Unlocked level 15</h3>
         <div class="btn-group btn-group-primary">
-          <button data-toggle="dropdown" class="btn btn-danger" type="button">Johannak</button>
+          <button data-toggle="dropdown" class="btn btn-danger" type="button">Johanna</button>
           <button data-toggle="dropdown" class="btn btn-danger dropdown-toggle" type="button"><span class="caret"></span>
           </button>
           <ul class="dropdown-menu">
