iDream update 13th July

--- a/zuna-tierlist.html
+++ b/zuna-tierlist.html
@@ -339,8 +339,8 @@
               </ul>
             </div>
             <div class="btn-group btn-group-primary">
-              <button data-toggle="dropdown" class="btn btn-info" type="button">The Butcher</button>
-              <button data-toggle="dropdown" class="btn btn-info dropdown-toggle" type="button"><span class="caret"></span>
+              <button data-toggle="dropdown" class="btn btn-primary" type="button">The Butcher</button>
+              <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button"><span class="caret"></span>
               </button>
               <ul class="dropdown-menu">
                 <li><a href="http://www.heroesnexus.com/talent-calculator/54-the-butcher#oPkSrPcSlSrSuS2AA">Zuna's Talent Build</a></li>
